--- a/style.css
+++ b/style.css
@@ -1,24 +1,44 @@
+/* GLOBAL STYLES */
 body {
-  animation: 10000ms ease-in-out infinite color-change;
+  background: #333;
+  padding-top: 5em;
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes color-change {
-  0% {
-    background-color: teal;
-  }
-  20% {
-    background-color: gold;
-  }
-  40% {
-    background-color: indianred;
-  }
-  60% {
-    background-color: violet;
-  }
-  80% {
-    background-color: green;
-  }
-  100% {
-    background-color: teal;
-  }
+/* DEMO-SPECIFIC STYLES */
+.typewriter h1 {
+  color: #fff;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  -webkit-animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+          animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+@-webkit-keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@-webkit-keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+}
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
 }
