--- a/AugustQuiz/stylesheet.css
+++ b/AugustQuiz/stylesheet.css
@@ -40,6 +40,7 @@ h2 {
     margin: auto;
     width:75%;
     text-align: left;
+	 font-size: 24px;
     padding: 15px;
     background-color: #E5E4E2;
     border-radius:16px;
