--- a/AugustQuiz/stylesheet.css
+++ b/AugustQuiz/stylesheet.css
@@ -1,29 +1,31 @@
 body {
     font-family: "Ubuntu","Verdana","Times", Georgia, Serif;
     text-align: center;
-    padding: 5px;
+    padding: 0.9rem;
     line-height: 180%;
-    font-size: 24px;
+    font-size: 30px;
 }
 
 p {
-	font-size: 24px;
+	font-size: 30px;
     padding: 10px;
 }
 
 h2 {
-	font-size: 24px;
+	font-size: 30px;
     text-align: center;
 }
 
 .smallBtn {
     margin: 10px 0 10px 0;
     background-color: #2C3539;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius:6px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius:10px;
     color: #fff;
-    font-size: 15px;
+    
+	
+	-size: 15px;
     text-decoration: none;
     cursor: pointer;
     border:none;
@@ -98,7 +100,7 @@ h2 {
 	display:inline-block;
 	cursor:pointer;
 	color:#306108;
-	font-size:19px;
+	font-size:30px;
 	font-weight:bold;
 	padding:18px 76px;
     margin: 5px;
