--- a/AugustQuiz/stylesheet.css
+++ b/AugustQuiz/stylesheet.css
@@ -5,6 +5,11 @@ body {
     line-height: 180%;
     font-size: 30px;
 }
+input[type="radio"] {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Chrome, Safari, Opera */
+  transform: scale(1.5);
+}
 
 p {
 	font-size: 30px;
