--- a/AugustQuiz/stylesheet.css
+++ b/AugustQuiz/stylesheet.css
@@ -28,9 +28,7 @@ h2 {
     -webkit-border-radius: 10px;
     border-radius:10px;
     color: #fff;
-    
-	
-	-size: 30px;
+    font-size: 30px;
     text-decoration: none;
     cursor: pointer;
     border:none;
