--- a/AugustQuiz/stylesheet.css
+++ b/AugustQuiz/stylesheet.css
@@ -28,6 +28,8 @@ h2 {
     -webkit-border-radius: 10px;
     border-radius:10px;
     color: #fff;
+    width: 130px;
+    height: 40px;
     font-size: 30px;
     text-decoration: none;
     cursor: pointer;
