--- a/AugustQuiz/stylesheet.css
+++ b/AugustQuiz/stylesheet.css
@@ -22,7 +22,8 @@ h2 {
 }
 
 .smallBtn {
-    margin: 10px 0 10px 0;
+    margin: 30px 0 30px 0;
+	padding: 30px;
     background-color: #2C3539;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
