--- a/AugustQuiz/Aug8/stylesheet.css
+++ b/AugustQuiz/Aug8/stylesheet.css
@@ -8,7 +8,7 @@ body {
 input[type="radio"] {
   -ms-transform: scale(1.5); /* IE 9 */
   -webkit-transform: scale(1.5); /* Chrome, Safari, Opera */
-  transform: scale(1.5);
+  transform: scale(2.5);
 }
 
 p {
@@ -48,11 +48,12 @@ h2 {
     margin: auto;
     width:95%;
     text-align: left;
-    font-size: 40px;
+    font-size: 35px;
     line-height:2;
     padding: 10px;
-    background-color: #E5E4E2;
-    border-radius:16px;
+    color:white;
+    background-color: black;
+    border-radius:20px;
 }
 
 #header {
